Fix overflow issue when printing from FF

--- a/app/assets/less/print.less
+++ b/app/assets/less/print.less
@@ -28,3 +28,7 @@ noscript,
 #content{
   margin-top: 0!important;
 }
+
+* {
+  overflow: visible !important;
+}
